--- a/app/src/main/res/layout/dialogo_configuracion.xml
+++ b/app/src/main/res/layout/dialogo_configuracion.xml
@@ -34,23 +34,12 @@
                 android:layout_marginTop="5dp"
                 android:background="@color/FondoSecundario2" />
 
-            <!--            <TextView-->
-            <!--                android:id="@+id/tituloGeneral"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:text="General"-->
-            <!--                android:background="@color/AzulOscuro"-->
-            <!--                android:gravity="center"-->
-            <!--                android:layout_marginTop="10dp"-->
-            <!--                android:textColor="@color/Blanco"-->
-            <!--                android:textSize="24sp"/>-->
-
             <Switch
                 android:id="@+id/recordarCuenta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="12dp"
-                android:paddingRight="2dp"
+                android:paddingRight="6dp"
                 android:text="Recordar Cuenta"
                 android:background="@color/FondoSecundario2"
                 android:textColor="@color/Blanco"
@@ -61,16 +50,6 @@
                 android:layout_height="4dp"
                 android:background="@color/FondoSecundario2" />
 
-            <!--
-            <Switch
-                android:id="@+id/guardarFotos"
-                android:layout_marginTop="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:text="Guardar Fotos en Galeria"/>
-            -->
-
             <TextView
                 android:id="@+id/tituloEspacio"
                 android:layout_width="match_parent"
@@ -80,40 +59,6 @@
                 android:text="Almacenamiento"
                 android:textColor="@color/Blanco"
                 android:textSize="24sp" />
-
-            <!--            <TextView-->
-            <!--                android:id="@+id/tituloAlmacen1"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:text="Fotografias en Galeria"-->
-            <!--                android:gravity="left"-->
-            <!--                android:background="@color/AzulOscuro"-->
-            <!--                android:layout_marginTop="10dp"-->
-            <!--                android:textColor="@color/Blanco"-->
-            <!--                android:paddingLeft="15dp"-->
-            <!--                android:textSize="18sp"/>-->
-
-            <!--            <LinearLayout-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:orientation="horizontal">-->
-
-            <!--                <ImageView-->
-            <!--                    android:layout_width="50dp"-->
-            <!--                    android:layout_height="50dp"-->
-            <!--                    android:padding="10dp"-->
-            <!--                    android:src="@drawable/ic_correo"/>-->
-
-            <!--                <TextView-->
-            <!--                    android:id="@+id/inicio_texto_usuario"-->
-            <!--                    android:layout_width="match_parent"-->
-            <!--                    android:layout_height="match_parent"-->
-            <!--                    android:text="Usuario"-->
-            <!--                    android:gravity="center_vertical"-->
-            <!--                    android:paddingLeft="5dp"-->
-            <!--                    android:textSize="20dp"-->
-            <!--                    android:textColor="@color/Blanco"/>-->
-            <!--            </LinearLayout>-->
 
             <View
                 android:layout_width="match_parent"
@@ -174,175 +119,229 @@
                 android:layout_height="4dp"
                 android:background="@color/FondoSecundario2" />
 
-            <TextView
-                android:id="@+id/tituloAlmacen2"
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/AzulOscuro"
-                android:gravity="left"
-                android:paddingLeft="15dp"
-                android:text="PDF - Fichas Normales"
-                android:textColor="@color/Blanco"
-                android:textSize="18sp" />
+                android:layout_height="4dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/FondoSecundario2" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
+                android:background="@color/FondoSecundario2"
                 android:weightSum="2">
 
-                <TextView
-                    android:id="@+id/tituloEspacio2"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="1.5"
-                    android:gravity="left"
-                    android:paddingLeft="15dp"
-                    android:text="15.5 GB"
-                    android:textColor="@color/Blanco"
-                    android:textSize="18sp" />
+                    android:layout_weight="1.7"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tituloAlmacen2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="4dp"
+                        android:text="PDF - Fichas Normales"
+                        android:textColor="@color/Blanco"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/tituloEspacio2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="3dp"
+                        android:text="15.5 GB"
+                        android:textColor="@color/Blanco"
+                        android:textSize="15sp" />
+                </LinearLayout>
 
                 <ImageButton
                     android:id="@+id/limpiar2"
+                    android:layout_height="50dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="0.5"
-                    android:background="@drawable/boton"
+                    android:layout_weight="0.3"
+                    android:layout_marginRight="4dp"
+                    android:background="@color/FondoSecundario2"
                     android:src="@drawable/ic_borar"
                     android:text="Limpiar"
                     android:textColor="@color/Blanco" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tituloAlmacen3"
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/AzulOscuro"
-                android:gravity="left"
-                android:paddingLeft="15dp"
-                android:text="PDF - Fichas Especiales"
-                android:textColor="@color/Blanco"
-                android:textSize="18sp" />
+                android:layout_height="4dp"
+                android:background="@color/FondoSecundario2" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/FondoSecundario2" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
+                android:background="@color/FondoSecundario2"
                 android:weightSum="2">
 
-                <TextView
-                    android:id="@+id/tituloEspacio3"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="1.5"
-                    android:gravity="left"
-                    android:paddingLeft="15dp"
-                    android:text="15.5 GB"
-                    android:textColor="@color/Blanco"
-                    android:textSize="18sp" />
+                    android:layout_weight="1.7"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tituloAlmacen3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="4dp"
+                        android:text="PDF - Fichas Normales"
+                        android:textColor="@color/Blanco"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/tituloEspacio3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="3dp"
+                        android:text="15.5 GB"
+                        android:textColor="@color/Blanco"
+                        android:textSize="15sp" />
+                </LinearLayout>
 
                 <ImageButton
                     android:id="@+id/limpiar3"
+                    android:layout_height="50dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="0.5"
-                    android:background="@drawable/boton"
+                    android:layout_weight="0.3"
+                    android:layout_marginRight="4dp"
+                    android:background="@color/FondoSecundario2"
                     android:src="@drawable/ic_borar"
                     android:text="Limpiar"
                     android:textColor="@color/Blanco" />
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@color/FondoSecundario2" />
 
             <TextView
                 android:id="@+id/tituloAyuda"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/AzulOscuro"
-                android:gravity="center"
+                android:paddingLeft="10dp"
                 android:text="Acerca de DHR"
                 android:textColor="@color/Blanco"
                 android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/tituloAcerca1"
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/AzulOscuro"
-                android:gravity="left"
-                android:paddingLeft="15dp"
-                android:text="Version de la Aplicacion"
-                android:textColor="@color/Blanco"
-                android:textSize="18sp" />
+                android:layout_height="4dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/FondoSecundario2" />
 
-            <TextView
-                android:id="@+id/tituloAcerca2"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="left"
-                android:paddingLeft="15dp"
-                android:text="v1.0"
-                android:textColor="@color/Blanco"
-                android:textSize="18sp" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:background="@color/FondoSecundario2">
 
-            <TextView
-                android:id="@+id/tituloAcerca3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/AzulOscuro"
-                android:gravity="left"
-                android:paddingLeft="15dp"
-                android:text="Compartir Aplicacion"
-                android:textColor="@color/Blanco"
-                android:textSize="18sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-            <Button
-                android:id="@+id/compartirLink"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/boton"
-                android:drawableLeft="@drawable/ic_compartir"
-                android:paddingLeft="15dp"
-                android:text="Compartir"
-                android:textColor="@color/Blanco"
-                android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/tituloAcerca1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="4dp"
+                        android:text="Version"
+                        android:textColor="@color/Blanco"
+                        android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/tituloAcerca4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/AzulOscuro"
-                android:gravity="left"
-                android:paddingLeft="15dp"
-                android:text="Ver Manual de Usuario"
-                android:textColor="@color/Blanco"
-                android:textSize="18sp" />
+                    <TextView
+                        android:id="@+id/tituloAcerca2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="3dp"
+                        android:paddingBottom="3dp"
+                        android:text="v1.0"
+                        android:textColor="@color/Blanco"
+                        android:textSize="15sp" />
+                </LinearLayout>
+            </LinearLayout>
 
-            <Button
-                android:id="@+id/abrirPDF"
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@color/FondoSecundario2" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/boton"
-                android:drawableLeft="@drawable/pdf_box"
-                android:paddingLeft="15dp"
-                android:text="Manual de Usuario"
-                android:textColor="@color/Blanco"
-                android:textSize="18sp" />
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp"
+                android:background="@color/FondoSecundario2">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_compartir"/>
+
+                <TextView
+                    android:id="@+id/tituloAcerca3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Compartir Aplicacion"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="8dp"
+                    android:textSize="20dp"
+                    android:textColor="@color/Blanco"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp"
+                android:background="@color/FondoSecundario2">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:padding="10dp"
+                    android:src="@drawable/pdf_box"/>
+
+                <TextView
+                    android:id="@+id/abrirPDF"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Ver Manual de Usuario"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="8dp"
+                    android:textSize="20dp"
+                    android:textColor="@color/Blanco"/>
+            </LinearLayout>
 
         </LinearLayout>
-
     </ScrollView>
-
 </FrameLayout>
