Pantalla Editar Perfil - Ajustes 1

--- a/app/src/main/res/layout/dialogo_editarperfil.xml
+++ b/app/src/main/res/layout/dialogo_editarperfil.xml
@@ -4,14 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/FondoTerciario">
+    android:background="@color/FondoSecundario">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:background="@color/FondoTerciario"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         android:orientation="vertical">
 
         <TextView
