--- a/app/src/main/res/layout/fragment_agregar.xml
+++ b/app/src/main/res/layout/fragment_agregar.xml
@@ -4,42 +4,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/FondoTerciario"
+    android:background="@color/FondoSecundario"
     tools:context=".OpcionIngreso.Agregar">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+<!--    <include-->
+<!--        android:id="@+id/toolbar"-->
+<!--        layout="@layout/toolbar" />-->
+
+    <TextView
+        android:id="@+id/titulo_fichas"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Fichas Disponibles"
+        android:textColor="@color/Blanco"
+        android:textSize="24dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:background="@color/AzulOscuro"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         android:orientation="vertical">
 
-        <Button
+        <LinearLayout
             android:id="@+id/fnueva"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:elevation="10dp"
-            android:background="@drawable/boton"
-            android:drawableTop="@drawable/ic_agregar64"
-            android:padding="10dp"
-            android:text="Ficha Nueva"
-            android:textSize="18sp" />
+            android:orientation="vertical"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="@color/FondoSecundario2">
 
-        <Button
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/ic_file"/>
+
+            <TextView
+                android:id="@+id/texto_fnueva"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ficha General"
+                android:textSize="24dp"
+                android:textColor="@color/Blanco"
+                android:gravity="center_horizontal"
+                />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/fenueva"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:elevation="10dp"
-            android:background="@drawable/boton"
-            android:drawableTop="@drawable/ic_estrella64"
-            android:padding="10dp"
-            android:text="Ficha Especial Nueva"
-            android:textSize="18sp" />
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="@color/FondoSecundario2">
+
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/ic_finance"/>
+
+            <TextView
+                android:id="@+id/texto_fenueva"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Evaluacion"
+                android:textSize="24dp"
+                android:textColor="@color/Blanco"
+                android:gravity="center_horizontal"
+                />
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
