--- a/app/src/main/res/layout/fragment_catalogos.xml
+++ b/app/src/main/res/layout/fragment_catalogos.xml
@@ -22,7 +22,6 @@
                 android:text="Catalogos Disponibles"
                 android:textColor="@color/Blanco"
                 android:textSize="24dp"
-                android:typeface=""
                 android:gravity="center_horizontal|center_vertical"
                 android:background="@color/AzulOscuro" />
 
@@ -90,6 +89,68 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="10dp"
+                android:weightSum="2">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/FondoSecundario2"
+                    android:orientation="vertical"
+                    android:paddingTop="10dp"
+                    android:layout_weight="1"
+                    android:layout_marginRight="10dp"
+                    android:paddingBottom="10dp">
+
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_diente" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Piezas"
+                        android:textColor="@color/Blanco"
+                        android:textSize="24dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/FondoSecundario2"
+                    android:orientation="vertical"
+                    android:paddingTop="10dp"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="10dp"
+                    android:paddingBottom="10dp">
+
+                    <ImageView
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_account" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Cuentas"
+                        android:textColor="@color/Blanco"
+                        android:textSize="24dp" />
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
