--- a/app/src/main/res/layout/fragment_servicios.xml
+++ b/app/src/main/res/layout/fragment_servicios.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/FondoSecundario"
-    tools:context=".Rutas.Catalogos.Servicios">
+    tools:context=".Rutas.Catalogos.Servicios.Servicios">
 
     <include
         android:id="@+id/toolbar"
