--- a/app/src/main/res/layout/item_servicio.xml
+++ b/app/src/main/res/layout/item_servicio.xml
@@ -14,7 +14,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1.7"
+            android:layout_weight="1.8"
             android:orientation="vertical">
 
             <TextView
@@ -64,9 +64,9 @@
             android:id="@+id/accionesServicio"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="0.3"
+            android:layout_weight="0.2"
             android:background="@color/FondoSecundario2"
-            android:src="@drawable/ic_log"
+            android:src="@drawable/ic_opciones"
             android:text="Limpiar"
             android:textColor="@color/Blanco" />
 
