--- a/app/src/main/res/layout/fragment_listado_servicios.xml
+++ b/app/src/main/res/layout/fragment_listado_servicios.xml
@@ -7,17 +7,17 @@
     android:background="@color/FondoSecundario"
     tools:context=".Rutas.Catalogos.Servicios.ListadoServicios">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/confirmar_servicio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="65dp"
-        android:clickable="true"
-        android:elevation="10dp"
-        android:src="@drawable/ic_check"
-        app:backgroundTint="@color/AzulOscuro" />
+<!--    <android.support.design.widget.FloatingActionButton-->
+<!--        android:id="@+id/confirmar_servicio"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="bottom|end"-->
+<!--        android:layout_marginRight="10dp"-->
+<!--        android:layout_marginBottom="65dp"-->
+<!--        android:clickable="true"-->
+<!--        android:elevation="10dp"-->
+<!--        android:src="@drawable/ic_check"-->
+<!--        app:backgroundTint="@color/AzulOscuro" />-->
 
 <!--    <TextView-->
 <!--        android:id="@+id/cat_titulo"-->
@@ -33,8 +33,6 @@
         android:id="@+id/listado_servicios"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:scrollbars="vertical"
         />
 
