--- a/app/src/main/res/layout/item_servicio.xml
+++ b/app/src/main/res/layout/item_servicio.xml
@@ -7,69 +7,82 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="3dp"
-        android:paddingRight="3dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.8"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tituloServicio"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:paddingLeft="10dp"
-                android:text="1 - Consulta General"
-                android:textColor="@color/Blanco"
-                android:textSize="18sp" />
+            android:orientation="horizontal"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:orientation="horizontal">
+                android:layout_weight="1.8"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/montoServicio"
+                    android:id="@+id/tituloServicio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.6"
                     android:gravity="left"
                     android:paddingLeft="10dp"
-                    android:paddingTop="3dp"
-                    android:text="Q. 150.00 "
+                    android:text="1 - Consulta General"
                     android:textColor="@color/Blanco"
-                    android:textSize="15sp" />
+                    android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/estadoServicio"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.4"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:background="@color/VerdeOscuro"
-                    android:text="Habilitado"
-                    android:textColor="@color/Blanco"
-                    android:textSize="14dp" />
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+                    <TextView
+                        android:id="@+id/montoServicio"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.6"
+                        android:gravity="left"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="3dp"
+                        android:text="Q. 150.00 "
+                        android:textColor="@color/Blanco"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/estadoServicio"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1.4"
+                        android:background="@color/VerdeOscuro"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:text="Habilitado"
+                        android:padding="2dp"
+                        android:textColor="@color/Blanco"
+                        android:textSize="14dp" />
+                </LinearLayout>
             </LinearLayout>
 
+            <ImageButton
+                android:id="@+id/accionesServicio"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
+                android:background="@color/FondoSecundario2"
+                android:src="@drawable/ic_opciones"
+                android:text="Limpiar"
+                android:textColor="@color/Blanco" />
 
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/accionesServicio"
+        <View
+            android:id="@+id/separadorServicio"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:background="@color/FondoSecundario2"
-            android:src="@drawable/ic_opciones"
-            android:text="Limpiar"
-            android:textColor="@color/Blanco" />
+            android:layout_height="4dp"
+            android:background="@color/FondoSecundario" />
 
     </LinearLayout>
+
 
 </FrameLayout>
