--- a/app/src/main/res/layout/item_servicio.xml
+++ b/app/src/main/res/layout/item_servicio.xml
@@ -14,7 +14,9 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingLeft="3dp"
-            android:paddingRight="3dp">
+            android:paddingRight="3dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -57,8 +59,9 @@
                         android:layout_weight="1.4"
                         android:background="@color/VerdeOscuro"
                         android:gravity="center_horizontal|center_vertical"
+                        android:paddingLeft="2dp"
+                        android:paddingRight="2dp"
                         android:text="Habilitado"
-                        android:padding="2dp"
                         android:textColor="@color/Blanco"
                         android:textSize="14dp" />
                 </LinearLayout>
