--- a/app/src/main/res/layout/fragment_listado_servicios.xml
+++ b/app/src/main/res/layout/fragment_listado_servicios.xml
@@ -29,10 +29,15 @@
 <!--        android:gravity="center_horizontal|center_vertical"-->
 <!--        android:background="@color/AzulOscuro" />-->
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/listado_servicios"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="65dp"
         android:scrollbars="vertical"
         />
 
