--- a/app/src/main/res/layout/fragment_servicios.xml
+++ b/app/src/main/res/layout/fragment_servicios.xml
@@ -12,7 +12,7 @@
         layout="@layout/toolbar" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/confirmar_servicio"
+        android:id="@+id/grabarServicio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -43,6 +43,7 @@
                 app:counterMaxLength="100">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/descripcionServicio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -58,6 +59,7 @@
                 app:counterMaxLength="10">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/montoServicio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
@@ -66,10 +68,13 @@
             </android.support.design.widget.TextInputLayout>
 
             <TextView
+                android:id="@+id/tituloEstadoServicio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingLeft="4dp"
                 android:text="Estado del Servicio:"
                 android:textSize="18dp"
+                android:textColor="@color/Blanco"
                 android:layout_marginTop="10dp"/>
 
             <RadioGroup
@@ -82,7 +87,7 @@
                 android:orientation="horizontal">
 
                 <RadioButton
-                    android:id="@+id/masculino"
+                    android:id="@+id/trueServicio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -94,7 +99,7 @@
                     android:layout_height="match_parent"/>
 
                 <RadioButton
-                    android:id="@+id/femenino"
+                    android:id="@+id/falseServicio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
