--- a/app/src/main/res/layout/item_servicio.xml
+++ b/app/src/main/res/layout/item_servicio.xml
@@ -32,7 +32,9 @@
                     android:paddingLeft="10dp"
                     android:text="1 - Consulta General"
                     android:textColor="@color/Blanco"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:ellipsize="end"
+                    android:lines="2"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
